--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "react-native-datatable",
+  "name": "react-native-datatable-report",
   "version": "1.0.0",
-  "description": "",
+  "description": "A ReactNative DataTable Component for android and iOS",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "react-native"
+    "react-native",
+    "react-component",
+    "react-native-component",
+    "react",
+    "mobile",
+    "ios",
+    "android",
+    "datatable"
   ],
-  "author": "",
+  "author": "peng",
   "license": "",
   "peerDependencies": {
     "react-native": "^0.41.2"
