--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-datatable-report",
-  "version": "1.0.0",
+  "version": "1.0.7",
   "description": "A ReactNative DataTable Component for android and iOS",
   "main": "index.js",
   "scripts": {
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "link": "^0.1.5",
+    "prop-types": "^15.6.2",
     "react-native-progress": "^3.5.0",
     "react-native-vector-icons": "^6.1.0"
   }
